--- a/home/.psqlrc
+++ b/home/.psqlrc
@@ -4,7 +4,7 @@
 \set QUIET 1
 \pset null '[NULL]'
 \set PROMPT1 '%[%033[1m%]%M %n@%/%R%[%033[0m%]%# '
-\set PROMPT2 (%R) ↳'
+\set PROMPT2 (%R) '↳  '
 \timing
 \x auto
 \set VERBOSITY verbose
